--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <ul class="header__nav--menu">                        
                         <li class="header__nav--list">
-                            <a href="#project" class="header__nav--link">proyectos</a>
+                            <a href="#project" class="header__nav--link" >proyectos</a>
                         </li>
                         <li class="header__nav--list">
                             <a href="#retos" class="header__nav--link">retos</a>
@@ -152,6 +152,9 @@
                 <div class="retos__body--item">
                     <figure class="retos__body--item-header">
                         <img src="img/item01.png" alt="" class="retos__body--item-img">
+                        <a href="#" class="retos__body--item-cta">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
                     </figure>
                     <div class="retos__body--item-middle">
                         <h4 class="retos__body--item-smallheading">bookmark landing page master</h4>
@@ -168,6 +171,9 @@
                 <div class="retos__body--item">
                     <figure class="retos__body--item-header">
                         <img src="img/item02.png" alt="" class="retos__body--item-img">
+                        <a href="#" class="retos__body--item-cta">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
                     </figure>
                     <div class="retos__body--item-middle">
                         <h4 class="retos__body--item-smallheading">calculadora app</h4>
@@ -184,6 +190,9 @@
                 <div class="retos__body--item">
                     <figure class="retos__body--item-header">
                         <img src="img/item03.png" alt="" class="retos__body--item-img">
+                        <a href="#" class="retos__body--item-cta">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
                     </figure>
                     <div class="retos__body--item-middle">
                         <h4 class="retos__body--item-smallheading">huddle landing page with curve section</h4>
@@ -200,6 +209,9 @@
                 <div class="retos__body--item">
                     <figure class="retos__body--item-header">
                         <img src="img/item04.png" alt="" class="retos__body--item-img">
+                        <a href="#" class="retos__body--item-cta">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
                     </figure>
                     <div class="retos__body--item-middle">
                         <h4 class="retos__body--item-smallheading">chat app CSS Illustation</h4>
@@ -215,6 +227,9 @@
                 <div class="retos__body--item">
                     <figure class="retos__body--item-header">
                         <img src="img/item05.png" alt="" class="retos__body--item-img">
+                        <a href="#" class="retos__body--item-cta">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
                     </figure>
                     <div class="retos__body--item-middle">
                         <h4 class="retos__body--item-smallheading">manage landing page master</h4>
@@ -231,6 +246,9 @@
                 <div class="retos__body--item">
                     <figure class="retos__body--item-header">
                         <img src="img/item06.png" alt="" class="retos__body--item-img">
+                        <a href="#" class="retos__body--item-cta">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
                     </figure>
                     <div class="retos__body--item-middle">
                         <h4 class="retos__body--item-smallheading">fylo landing page master <br>with two columns</h4>
