--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header header-bg">
         <section class="header__main">
             <div class="header__top">
-                <a href="#" class="header__top--brand">
+                <a href="index.html" class="header__top--brand">
                     <h3 class="header__top--title">Luis Selva</h3>
                 </a>
     
@@ -47,7 +47,7 @@
                 <div class="header__home--description" data-aos-duration="2000" data-aos="fade-up">
                     <h1 class="header__home--firstheading">luis selva</h1>
                     <h4 class="header__home--smallheading">desarrollador web</h4>
-                    <a href="#" class="header__home--cta">ver mis proyectos</a>
+                    <a href="#project" class="header__home--cta">ver mis proyectos</a>
                 </div>
             </div>
         </section>
@@ -103,8 +103,8 @@
                             Pagina web creada para proyecto final de curso de diseño de pagina web en el instituto ISIC
                         </p>
                         <div class="project__card--buttongroup">
-                            <a href="#" class="project__card--cta">Ver codigo</a>
-                            <a href="#" class="project__card--cta">ver proyecto</a>
+                            <a href="https://github.com/luis08201/isic-version2021" class="project__card--cta">Ver codigo</a>
+                            <a href="https://luis08201.github.io/isic-version2021/" class="project__card--cta">ver proyecto</a>
                         </div>
                    </div>
             </div>
@@ -124,8 +124,8 @@
                         Pagina web creada para proyecto final de curso de desarrollo de pagina web en el instituto Sydicom
                     </p>
                     <div class="project__card--buttongroup">
-                        <a href="#" class="project__card--cta">Ver codigo</a>
-                        <a href="#" class="project__card--cta">ver proyecto</a>
+                        <a href="https://github.com/luis08201/SYDICOM" class="project__card--cta">Ver codigo</a>
+                        <a href="https://luis08201.github.io/SYDICOM/" class="project__card--cta">ver proyecto</a>
                     </div>
                 </div>
             </div>
@@ -152,8 +152,8 @@
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item01.png" alt="" class="retos__body--item-img">
-                        <a href="#" class="retos__body--item-cta">
+                        <img src="img/item01.png" alt="bookmark landing page master" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/bookmark-landing-page-master" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
@@ -166,13 +166,13 @@
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="#" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/bookmark-landing-page-master/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item02.png" alt="" class="retos__body--item-img">
-                        <a href="#" class="retos__body--item-cta">
+                        <img src="img/item02.png" alt="calculadora app" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/calculator-app-main-second-attempt" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
@@ -185,13 +185,13 @@
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="#" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/calculator-app-main-second-attempt/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item03.png" alt="" class="retos__body--item-img">
-                        <a href="#" class="retos__body--item-cta">
+                        <img src="img/item03.png" alt="huddle landing page with curve section" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/huddle-landing-page-with-curved-sections-master" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
@@ -204,13 +204,13 @@
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="#" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/huddle-landing-page-with-curved-sections-master/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item04.png" alt="" class="retos__body--item-img">
-                        <a href="#" class="retos__body--item-cta">
+                        <img src="img/item04.png" alt="chat app CSS Illustation" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/chat-app-css-illustration-master" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
@@ -222,13 +222,13 @@
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="#" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/chat-app-css-illustration-master/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item05.png" alt="" class="retos__body--item-img">
-                        <a href="#" class="retos__body--item-cta">
+                        <img src="img/item05.png" alt="manage landing page master" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/manage-landing-page-master" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
@@ -241,13 +241,13 @@
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="#" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/manage-landing-page-master/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item06.png" alt="" class="retos__body--item-img">
-                        <a href="#" class="retos__body--item-cta">
+                        <img src="img/item06.png" alt="Fylo landing page master with two columns" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/fylo-landing-page-with-two-column-layout-master" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="#" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/fylo-landing-page-with-two-column-layout-master/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
             </div>
@@ -300,10 +300,10 @@
                 </p>
             </article>
             <aside class="footer__aside">
-                <a href="#" class="footer__aside--cta">
+                <a href="https://twitter.com/luis08201" class="footer__aside--cta">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href="#" class="footer__aside--cta">
+                <a href="https://github.com/luis08201" class="footer__aside--cta">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </aside>
