reemplazando reto por reto con bootstrap

--- a/index.html
+++ b/index.html
@@ -246,21 +246,22 @@
                 </div>
                 <div class="retos__body--item" data-aos-duration="2000" data-aos="fade-up">
                     <figure class="retos__body--item-header">
-                        <img src="img/item06.png" alt="Fylo landing page master with two columns" class="retos__body--item-img">
-                        <a href="https://github.com/luis08201/fylo-landing-page-with-two-column-layout-master" class="retos__body--item-cta">
+                        <img src="img/item07.png" alt="Fylo landing page master with two columns" class="retos__body--item-img">
+                        <a href="https://github.com/luis08201/loopstudios-landing-page-main-second-attempt" class="retos__body--item-cta">
                             <i class="fa-solid fa-code"></i>
                         </a>
                     </figure>
                     <div class="retos__body--item-middle">
-                        <h4 class="retos__body--item-smallheading">fylo landing page master <br>with two columns</h4>
+                        <h4 class="retos__body--item-smallheading">Loopstudios Landing Page Main</h4>
                         <div class="retos__body--item-code">
                             <i class="fa-brands fa-html5 retos__body--item-html"></i>
                             <i class="fa-brands fa-js-square retos__body--item-js"></i>
                             <i class="fa-brands fa-sass retos__body--item-sass"></i>
+                            <i class="fa-brands fa-bootstrap retos__body--item-bootstrap"></i>
                         </div>
                     </div>
                     <div class="retos__body--item-bottom">
-                        <a href="https://luis08201.github.io/fylo-landing-page-with-two-column-layout-master/" class="retos__body--item-bottom-cta">ver proyecto</a>
+                        <a href="https://luis08201.github.io/loopstudios-landing-page-main-second-attempt/" class="retos__body--item-bottom-cta">ver proyecto</a>
                     </div>
                 </div>
             </div>
