--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portfolio | Luis Selva</title>
 </head>
 <body>
-    <header class="header header-bg">
+    <header class="header header-bg" id="home">
         <section class="header__main">
             <div class="header__top">
                 <a href="index.html" class="header__top--brand">
@@ -21,7 +21,7 @@
 
                 <nav class="header__nav" id="nav">
                     <div class="header__nav--head">
-                        <a href="#" class="header__top--brand">
+                        <a href="#home" class="header__top--brand">
                             <h3 class="header__nav--title">Luis Selva</h3>
                         </a>
                         
@@ -310,7 +310,11 @@
             </aside>
         </section>
     </footer>
+    <a href="#home" class="floating--btn">
+        <i class="fa-solid fa-circle-arrow-up"></i>
+    </a>
     <script src="js/menu.js"></script>
+    <script src="js/scroll.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/validation.js"></script>
     <script>
